# AdventureGame

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  doxygen_crawl.html  files.html  justfile  main.cpp  main.test.cpp  main_8cpp.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt  ConsoleInputHandler.cpp  ConsoleInputHandler.h  ConsoleInputHandler.test.cpp  Direction.cpp  Direction.hpp  Direction.test.cpp  Game.cpp  Game.hpp  Game.test.cpp  IInputHandler.hpp  IMap.hpp  IPlayer.hpp  Inventory.hpp  Map.cpp  Map.hpp  Map.test.cpp  MockInputHandler.hpp  MockMap.hpp  MockPlayer.hpp  Player.cpp  Player.hpp  Player.test.cpp  Room.cpp  Room.hpp  Room.test.cpp  Types.hpp
search/: all_1.js  all_4.js  pages_0.js  pages_1.js  searchdata.js
